[package]
name = "crypto-momentum-ai"
version = "0.1.0"
edition = "2024"
description = "AI-powered cryptocurrency momentum trading system with quantitative analysis and automated execution"

[[bin]]
name = "crypto-momentum-ai"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
itertools = "0.13"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.16"

futures = "0.3"
reqwest = { version = "0.12", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "stream",
    "rustls-tls",
] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time"] }
tokio-retry = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
fs2 = "0.4" # cross-platform file locking
tempfile = "3.10" # atomic temp file pattern
openai = "1.0" # OpenAI API client
